syntax = "proto3";

package helloworld;

service Greeter {
	rpc SayHello (HelloRequest) returns (HelloReply){}
	rpc Integer (IntegerRequest) returns (IntegerResponse){}
}

message HelloRequest{
	string name = 1;
}

message HelloReply {
	string message = 1;
}

message IntegerRequest{
	int32 val = 1;
}

message IntegerResponse{
	int32 val = 1;
}
